[update] Fixed pricing links, blog link and search inaccuracy.

--- a/src/locale/manual.pot
+++ b/src/locale/manual.pot
@@ -3453,7 +3453,7 @@ msgid "Cordova Plugin provides a simple way to write a native code onto your pro
 msgstr ""
 
 #: ../doc/manual/dependencies/custom_cordova_plugin.rst:17
-msgid "You need to subscribe to a valid plan in order to use custom Cordova plugins. Please refer to `Monaca Pricing <https://monaca.mobi/en/pricing>`_."
+msgid "You need to subscribe to a valid plan in order to use custom Cordova plugins. Please refer to `Monaca Pricing <https://monaca.io/pricing.html>`_."
 msgstr ""
 
 #: ../doc/manual/dependencies/custom_cordova_plugin.rst:19
@@ -4064,7 +4064,7 @@ msgid "Monaca Upload Feature"
 msgstr ""
 
 #: ../doc/manual/deploy/appstore/app_submission.rst:7
-msgid "In order to use this upload feature, you are required to subscribe to a valid plan. Please refer to `Pricing <https://monaca.mobi/en/pricing>`_."
+msgid "In order to use this upload feature, you are required to subscribe to a valid plan. Please refer to `Pricing <https://monaca.io/pricing.html>`_."
 msgstr ""
 
 #: ../doc/manual/deploy/appstore/app_submission.rst:9
@@ -7093,7 +7093,7 @@ msgid "In this section, we will guide you on how to integrate your GitHub accoun
 msgstr ""
 
 #: ../doc/manual/development/monaca_ide/version_control.rst:17
-msgid "Generally, you can only connect to public repositories. However, with valid Monaca subscription plan, you can additionally connect to private repositories. Please refer to `Pricing <https://monaca.mobi/en/pricing>`_."
+msgid "Generally, you can only connect to public repositories. However, with valid Monaca subscription plan, you can additionally connect to private repositories. Please refer to `Pricing <https://monaca.io/pricing.html>`_."
 msgstr ""
 
 #: ../doc/manual/development/monaca_ide/version_control.rst:23
@@ -8091,7 +8091,7 @@ msgid "Microsoft Visual Studio 2015 Community Edition, Professional Edition or h
 msgstr ""
 
 #: ../doc/manual/development/monaca_vs/overview.rst:25
-msgid "a valid plan subscription. Please refer to `Pricing <https://monaca.mobi/en/pricing>`_."
+msgid "a valid plan subscription. Please refer to `Pricing <https://monaca.io/pricing.html>`_."
 msgstr ""
 
 #: ../doc/manual/development/monaca_vs/overview.rst:30
