--- a/src/locale/quick_start.pot
+++ b/src/locale/quick_start.pot
@@ -1101,7 +1101,7 @@ msgid "Monaca Localkit is a local development environment tool for Monaca apps. 
 msgstr ""
 
 #: ../doc/quick_start/localkit/index.rst:7
-msgid "You are required to have a valid plan in order to use Monaca Localkit. Otherwise, it will run in the evaluation mode for 30 days after the first login. Please refer to `Pricing <https://monaca.mobi/en/pricing?type=2>`_ for more details."
+msgid "You are required to have a valid plan in order to use Monaca Localkit. Otherwise, it will run in the evaluation mode for 30 days after the first login. Please refer to `Pricing <https://monaca.io/pricing.html>`_ for more details."
 msgstr ""
 
 #: ../doc/quick_start/localkit/index.rst:9
@@ -1444,7 +1444,7 @@ msgid "Monaca Registration Plan"
 msgstr ""
 
 #: ../doc/quick_start/monaca_intro.rst:123
-msgid "Monaca provides various account types to match with your needs ranging from basic (FREE) to enterprise level. After registration, your default account is basic type. You can upgrade it later when you want. For detailed information of Monaca account types and its usages, please refer to `Monaca Pricing <http://monaca.mobi/pricing/>`_."
+msgid "Monaca provides various account types to match with your needs ranging from basic (FREE) to enterprise level. After registration, your default account is basic type. You can upgrade it later when you want. For detailed information of Monaca account types and its usages, please refer to `Monaca Pricing <https://monaca.io/pricing.html>`_."
 msgstr ""
 
 #: ../doc/quick_start/monaca_intro.rst:125
@@ -1703,7 +1703,7 @@ msgid "Monaca for Visual Studio is an extension which allows you to develop Mona
 msgstr ""
 
 #: ../doc/quick_start/monaca_vs/index.rst:8
-msgid "In order to use Monaca for Visual Studio, you are required to have Microsoft Visual Studio 2015 Community Edition, Professional Edition or higher editions. Also, you need to subscribe to a valid plan. Please refer to `Pricing <https://monaca.mobi/en/pricing>`_."
+msgid "In order to use Monaca for Visual Studio, you are required to have Microsoft Visual Studio 2015 Community Edition, Professional Edition or higher editions. Also, you need to subscribe to a valid plan. Please refer to `Pricing <https://monaca.io/pricing.html>`_."
 msgstr ""
 
 #: ../doc/quick_start/monaca_vs/index.rst:10
