--- a/src/locale/reference.pot
+++ b/src/locale/reference.pot
@@ -22215,7 +22215,7 @@ msgid "`Repro <https://repro.io/>`__ is a service which provides the confirmatio
 msgstr ""
 
 #: ../doc/reference/service_integration/repro.rst:13
-msgid "This Repro service integration is available for all Monaca users. However, if you want to use the latest Repro plugin via `Github <https://github.com/reproio/repro-ios-sdk>`_, you can :ref:`import <import_cordova_plugin>` it. In order to import this plugin, you need to subscribe to a valid plan. Please refer to `Pricing <https://monaca.mobi/en/pricing>`_."
+msgid "This Repro service integration is available for all Monaca users. However, if you want to use the latest Repro plugin via `Github <https://github.com/reproio/repro-ios-sdk>`_, you can :ref:`import <import_cordova_plugin>` it. In order to import this plugin, you need to subscribe to a valid plan. Please refer to `Pricing <https://monaca.io/pricing.html>`_."
 msgstr ""
 
 #: ../doc/reference/service_integration/repro.rst:16
