[update] Updated Monaca Debugger for Android Emulator page.

--- a/src/locale/ja/LC_MESSAGES/reference.po
+++ b/src/locale/ja/LC_MESSAGES/reference.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-08-19 04:01+0000\n"
+"PO-Revision-Date: 2016-08-26 02:40+0000\n"
 "Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -26063,7 +26063,7 @@ msgid ""
 "Therefore, in order to use this plugin, you need to include the relevant "
 "keys in your ``config.xml`` and the scripts will take care of the rest when "
 "you build your project."
-msgstr "このプラグインには、実行ファイルのようなものはありません。代わりに、フック用のスクリプトを使用して、各プラットフォームの設定ファイルに対して、``config.xml`` ファイル内に設定した preference を適用 ( 上書きまたは追加 ) します。たとえば、iOS の場合、preference の name 属性は、iOS 設定ファイルの key と紐づけされています。よって、このプラグインを使用する場合、preference の name 属性など、カスタマイズに必要な設定を、あらかじめ、``config.xml`` 内に記述しておきます。適用処理は、プロジェクトのビルド時に、スクリプト側で行ってくれます。"
+msgstr "このプラグインには、実行ファイルのようなものはありません。代わりに、フック用のスクリプトを使用して、各プラットフォームの設定ファイルに対して、``config.xml`` ファイル内に設定した preference を適用 ( 上書きまたは追加 ) します。たとえば、iOS の場合、preference の name 属性は、iOS 設定ファイルの key と紐づけされています。よって、このプラグインを使用する場合、カスタマイズに必要な設定 ( preference の name 属性などを使用 ) を、あらかじめ、``config.xml`` 内に記述しておきます。適用処理は、プロジェクトのビルド時に、スクリプト側で行ってくれます。"
 
 #: ../doc/reference/third_party_phonegap/custom_config.rst:27
 msgid ""
