--- a/src/locale/ja/LC_MESSAGES/manual.po
+++ b/src/locale/ja/LC_MESSAGES/manual.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-08-31 08:31+0000\n"
-"Last-Translator: Masahiro Tanaka <masahiro@asial.co.jp>\n"
+"PO-Revision-Date: 2016-08-31 09:28+0000\n"
+"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -10582,6 +10582,10 @@ msgstr ""
 msgid ":ref:`supported_services`"
 msgstr ""
 
+#: ../doc/manual/monaca_ci/json_sample.rst:97
+msgid ":ref:`troubleshooting`"
+msgstr ""
+
 #: ../doc/manual/monaca_ci/overview.rst:11
 msgid ""
 "Monaca CI (Continuous Integration & Deployment) is a service that has been "
@@ -10648,7 +10652,7 @@ msgid ""
 "iOS platform every time you push your project code to a valid GitHub's "
 "branch/tag as configured using regular expression inside the script. Once "
 "the build process is completed, you can find these built files under Build "
-"History (:menuselection:`Build --> Build History`) panel."
+"History panel (:menuselection:`Build --> Build History`)."
 msgstr ""
 
 #: ../doc/manual/monaca_ci/overview.rst:53
